--- a/_posts/2021/2021-05-27-bayesian_network_Summary.Rmd
+++ b/_posts/2021/2021-05-27-bayesian_network_Summary.Rmd
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "math test"
+title: "Bayesian network 정리"
 #categories: [Bayesian]
 #tag: [causal-inference, bayesian, DAG, probability, gaussian-bayesian-network,data-analysis]
 comments: true
